--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 
 <body>
+    <div class="container">
+        <h2>FizzBuzz DOM(inicToretto)</h2>
+        <div class="row">
 
-    <script type="text/javascript" src="js/script.js"></script>
+        </div>
+        <script type="text/javascript" src="js/script.js"></script>
+    </div>
 </body>
 
 </html>
