--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h2>FizzBuzz DOM(inicToretto)</h2>
         <div class="row">
-
+            <div class="box"></div>
         </div>
         <script type="text/javascript" src="js/script.js"></script>
     </div>
